--- a/my-app/src/components/partnership/partnership.css
+++ b/my-app/src/components/partnership/partnership.css
@@ -63,7 +63,7 @@
     border: solid 1px;
     border-radius: 10px;
     
-    max-width: 100%;
+    width: auto;
     margin: 1rem;
     padding: 1rem;
    
@@ -77,7 +77,7 @@
 .start-up__grid img {
     max-width: 4%;
     position: relative;
-    right: 1.5rem;
+    right: 1rem;
     bottom: 1rem;
     z-index: 1;
 
@@ -115,7 +115,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    max-width:  100%;
+    max-width:  auto;
     padding: 1rem;
     margin: 1rem;
     line-height: 28px;
@@ -161,7 +161,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 10px;
-    max-width: 100%;
+    max-width: auto;
     padding: 1rem;
     margin: 1rem;
     line-height: 28px;
@@ -174,7 +174,7 @@
 .affiliate__img-1 {
     max-width: 4%;
     position: relative;
-    right: 1.5rem;
+    right: 1rem;
     bottom: 1rem;
     z-index: 1
 }
